# advent-of-code-2025

./: .gitignore  CMakeLists.txt  advent-of-code-2025.cpp  advent-of-code-2025.sln
.devcontainer/: devcontainer.json
AdventOfCode2025/: AdventOfCode2025.csproj  Day.cs  Day1.cs  Day2.cs  IDay.cs  Program.cs  day.cpp  day1.cpp  https_client.cpp  ssl.cpp
AdventOfCode2025.Tests/: AdventOfCode2025.Tests.csproj  Day1_Part1Should.cs  Day1_Part2Should.cs  Day2_Part1Should.cs  Day2_Part2Should.cs
include/: advent_of_code.h
